[gd_scene load_steps=9 format=3 uid="uid://uppqsuoml54r"]

[ext_resource type="ArrayMesh" uid="uid://cgc0qavakq5qe" path="res://Reference/View_detextion_shape.obj" id="1_eexgb"]
[ext_resource type="Script" uid="uid://mdd5uem4udvy" path="res://Reference/enemy.gd" id="1_s2amd"]
[ext_resource type="PackedScene" uid="uid://dj2qb1a0ghqjo" path="res://assets/duende1/duende1.glb" id="2_3o04j"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_w6b1c"]
radius = 0.4593506
height = 0.9187012

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xxeop"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kw3yy"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_i5qwh"]
points = PackedVector3Array(-0.493909, -1.00019, -1.48058, -0.493909, 0.99977, -1.48058, 0.493368, -1.00019, -1.48058, -2.43745, -2.1243, 3.26582, -2.43745, 2.1243, 3.26582, 0.493368, 0.99977, -1.48058, 2.43738, -2.1243, 3.26582, 2.43738, 2.1243, 3.26582)

[sub_resource type="BoxMesh" id="BoxMesh_qn3py"]
size = Vector3(0.2, 0.2, 0.4)

[node name="Enemy" type="CharacterBody3D"]
script = ExtResource("1_s2amd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4383545, 0)
shape = SubResource("CapsuleShape3D_w6b1c")

[node name="Sketchfab_Scene" parent="." instance=ExtResource("2_3o04j")]
transform = Transform3D(-0.0009986296, 0, 5.233605e-05, 0, 0.001, 0, -5.233605e-05, 0, -0.0009986296, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_xxeop")
surface_material_override/0 = SubResource("StandardMaterial3D_kw3yy")

[node name="enemy_FOV" type="Area3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.00400013)
visible = false

[node name="ViewDetextionShape" type="MeshInstance3D" parent="enemy_FOV"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0256735, -1.19209e-07, 1.97653)
visible = false
mesh = ExtResource("1_eexgb")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="enemy_FOV"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0256735, -1.19209e-07, 1.97653)
visible = false
shape = SubResource("ConvexPolygonShape3D_i5qwh")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.6
avoidance_enabled = true

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.446334, -0.584999)
visible = false
mesh = SubResource("BoxMesh_qn3py")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="FOV_cast" type="RayCast3D" parent="."]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0, 0, 0)
visible = false
target_position = Vector3(0, -1, -105)
debug_shape_custom_color = Color(1, 1, 1, 1)

[connection signal="body_entered" from="enemy_FOV" to="." method="_on_enemy_fov_body_entered"]
[connection signal="body_exited" from="enemy_FOV" to="." method="_on_enemy_fov_body_exited"]
[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
